[package]
name    = "valence-program-registry"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema                = { workspace = true }
cosmwasm-std                   = { workspace = true }
cw-storage-plus                = { workspace = true }
cw2                            = { workspace = true }
schemars                       = { workspace = true }
serde                          = { workspace = true }
thiserror                      = { workspace = true }
cw-ownable                     = { workspace = true }
valence-program-registry-utils = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
