[package]
name       = "osmo-gamm-example"
edition    = { workspace = true }
license    = { workspace = true }
version    = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "osmo_gamm_test"
path = "src/osmo_gamm_test.rs"

[dependencies]
localic-std                     = { git = "https://github.com/strangelove-ventures/interchaintest", branch = "main" }
localic-utils                   = { git = "https://github.com/timewave-computer/localic-utils", branch = "main" }
sha2                            = { workspace = true }
hex                             = { workspace = true }
serde_json                      = { workspace = true }
env_logger                      = { workspace = true }
log                             = { workspace = true }
rand                            = "0.8.5"
cosmwasm-std                    = { workspace = true }
cosmwasm-std-old                = { package = "cosmwasm-std", version = "1.5.7" }
cw-utils                        = { workspace = true }
valence-authorization-utils     = { workspace = true }
valence-processor-utils         = { workspace = true }
valence-account-utils           = { workspace = true }
valence-library-utils           = { workspace = true }
valence-splitter-library        = { workspace = true }
valence-program-manager         = { workspace = true }
valence-program-registry-utils  = { workspace = true }
valence-e2e                     = { workspace = true }
valence-osmosis-utils           = { workspace = true }
valence-osmosis-gamm-lper       = { workspace = true }
valence-osmosis-gamm-withdrawer = { workspace = true }
