[package]
name = "zk-integration-tests"
version = "0.1.0"
edition = "2021"
description = "Integration tests for ZK account factory components"
license = "Apache-2.0"
repository = "https://github.com/timewave-computer/valence-protocol"
authors = ["Timewave Computer <info@timewave.computer>"]

[workspace]

[dependencies]
# JSON handling
serde_json = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Cryptographic dependencies
sha2 = "0.10"
hex = "0.4"

# Testing framework
tokio-test = "0.4"

# ZK circuit dependencies (SP1)
valence-coprocessor = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.1.11", default-features = false }

# Path dependencies to our ZK components
evm-account-factory-controller = { path = "../evm_account_factory/controller" }
evm-account-factory-circuit = { path = "../evm_account_factory/circuit" }
cosmwasm-account-factory-controller = { path = "../cosmwasm_account_factory/controller" }
cosmwasm-account-factory-circuit = { path = "../cosmwasm_account_factory/circuit" }

[dev-dependencies]
# Additional test utilities
proptest = "1.0"
criterion = "0.5" 