[package]
name    = "valence-account-factory"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# Purpose: Factory contract for deterministic account creation using Instantiate2 with atomic operations

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema       = { workspace = true }
cosmwasm-std          = { workspace = true, features = ["stargate", "cosmwasm_1_2"] }
cosmwasm-crypto       = { workspace = true }
cw-storage-plus       = { workspace = true }
cw2                   = { workspace = true }
schemars              = { workspace = true }
serde                 = { workspace = true }
thiserror             = { workspace = true }
sha2                  = { workspace = true }
hex                   = { workspace = true }
ripemd                = "0.1"

[dev-dependencies]
cw-multi-test         = { workspace = true } 