[package]
name    = "valence-interchain-account"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema       = { workspace = true }
cosmwasm-std          = { workspace = true }
cw-ownable            = { workspace = true }
cw-storage-plus       = { workspace = true }
cw2                   = { workspace = true }
schemars              = { workspace = true }
serde                 = { workspace = true }
thiserror             = { workspace = true }
neutron-sdk           = { workspace = true }
serde_json            = { workspace = true }
valence-account-utils = { workspace = true }
valence-ibc-utils     = { workspace = true, features = ["neutron"] }
