[package]
name    = "valence-jit-account"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# Purpose: JIT account implementation for factory-created accounts with controller-bound execution

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema       = { workspace = true }
cosmwasm-std          = { workspace = true, features = ["stargate"] }
cw-storage-plus       = { workspace = true }
cw2                   = { workspace = true }
schemars              = { workspace = true }
serde                 = { workspace = true }
thiserror             = { workspace = true }
valence-account-utils = { workspace = true }

[dev-dependencies]
cw-multi-test         = { workspace = true } 