[package]
name    = "valence-storage-account"
version = { workspace = true }
edition = { workspace = true }
authors = ["Timewave Labs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema          = { workspace = true }
cosmwasm-std             = { workspace = true, features = ["stargate"] }
cw-ownable               = { workspace = true }
cw-storage-plus          = { workspace = true }
cw2                      = { workspace = true }
schemars                 = { workspace = true }
serde                    = { workspace = true }
thiserror                = { workspace = true }
valence-account-utils    = { workspace = true }
valence-middleware-utils = { workspace = true }

[dev-dependencies]
cw-multi-test         = { workspace = true }
cw-denom              = { workspace = true }
cw-ownable            = { workspace = true }
cw20                  = { workspace = true }
cw20-base             = { workspace = true }
getset                = { workspace = true }
itertools             = { workspace = true }
sha2                  = { workspace = true }
valence-account-utils = { workspace = true, features = ["testing"] }
