[package]
name    = "valence-encoder-broker"
version = "0.1.0"
authors = ["Timewave Labs"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema       = { workspace = true }
cosmwasm-std          = { workspace = true }
cw-ownable            = { workspace = true }
cw-storage-plus       = { workspace = true }
cw2                   = { workspace = true }
thiserror             = { workspace = true }
valence-encoder-utils = { workspace = true }
