[package]
name    = "valence-evm-encoder-v1"
version = "1.0.0"
authors = [ "Timewave Labs" ]
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
# use library feature to disable all instantiate/execute/query exports
library = [  ]

[dependencies]
cosmwasm-schema             = { workspace = true }
cosmwasm-std                = { workspace = true }
cw-storage-plus             = { workspace = true }
cw-ownable                  = { workspace = true }
cw2                         = { workspace = true }
cw-utils                    = { workspace = true }
thiserror                   = { workspace = true }
valence-encoder-utils       = { workspace = true }
valence-authorization-utils = { workspace = true }
valence-library-utils       = { workspace = true }
valence-forwarder-library   = { workspace = true }
serde_json                  = { workspace = true }
alloy-sol-types             = "0.7.7"
alloy-primitives            = "0.7.7"
strum                       = { version = "0.26.3", features = [ "derive" ] }
