[package]
name       = "valence-ica-ibc-transfer"
authors    = { workspace = true }
edition    = { workspace = true }
license    = { workspace = true }
version    = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema       = { workspace = true }
cosmwasm-std          = { workspace = true }
cw-ownable            = { workspace = true }
cw-storage-plus       = { workspace = true }
schemars              = { workspace = true }
serde                 = { workspace = true }
thiserror             = { workspace = true }
valence-macros        = { workspace = true }
valence-library-utils = { workspace = true }
valence-library-base  = { workspace = true }
valence-ibc-utils     = { workspace = true }
cosmos-sdk-proto      = { version = "0.26.1", default-features = false }
ibc-proto             = { version = "0.51.1", default-features = false }

[dev-dependencies]
cw-multi-test         = { workspace = true }
valence-account-utils = { workspace = true }
valence-library-utils = { workspace = true, features = ["testing"] }
