[package]
name       = "valence-osmosis-cl-lper"
authors    = { workspace = true }
edition    = { workspace = true }
license    = { workspace = true }
version    = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
# backtraces  = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std          = { workspace = true }
cosmwasm-schema       = { workspace = true }
cw-ownable            = { workspace = true }
valence-macros        = { workspace = true }
valence-library-utils = { workspace = true }
valence-library-base  = { workspace = true }
osmosis-std           = { workspace = true }
osmosis-std-derive    = { workspace = true }
valence-account-utils = { workspace = true }
valence-osmosis-utils = { workspace = true }
cw-storage-plus       = { workspace = true }
serde                 = { workspace = true }
schemars              = { workspace = true }
cw-utils              = { workspace = true }
serde_json            = { workspace = true }

[dev-dependencies]
cw20                  = { workspace = true }
osmosis-test-tube     = { workspace = true }
valence-osmosis-utils = { workspace = true, features = ["testing"] }
